--- a/todo/templates/todo/edit_item.html
+++ b/todo/templates/todo/edit_item.html
@@ -7,19 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Add a ToDo Item:</h1>
-    <form method="POST" action="{% url 'add' %}">
+    <h1>Edit a ToDo Item:</h1>
+    <form method="POST" action="add">
         {% csrf_token %}
-        {{ form.as_p}}       
-
+        {{ form.as_p }}
         <div>
             <p>
-                <button type="submit">Add Item</button>
+                <button type="submit">Update Item</button>
             </p>
-        </div>     
+        </div>
     </form>
-
-        
 </body>
+
 </html>
